fix: Overflow

--- a/src/components/LazyImage/styles.scss
+++ b/src/components/LazyImage/styles.scss
@@ -4,15 +4,11 @@
   --pulse-inner-circle-color: var(--primary-color);
 
   position: relative;
-  // height: 0;
   overflow: hidden;
   padding-top: 90%;
   background: #e4e4e4;
   border-radius: 5px;
-
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-position: 50% 50%;
+  will-change: background;
 }
 
 .picture {
@@ -21,7 +17,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  // filter: blur(1px);
 }
 
 .image {
@@ -31,13 +26,13 @@
   // width: 100%;
   // height: auto;
   // object-fit: cover;
-
+  max-width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
   opacity: 0;
-  transition: transform 0.6s cubic-bezier(0.93, -0.03, 0.36, 1.35),
+  transition: transform 0.9s cubic-bezier(0.93, -0.03, 0.36, 1.35),
     opacity 0.4s cubic-bezier(0.93, -0.03, 0.36, 1.35);
   will-change: opacity, transform;
 
