--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -17,5 +17,9 @@
 
 body {
   font-family: 'Quicksand', sans-serif;
-  // overflow-x: hidden;
+  // overflow-y: overlay;
+}
+
+html {
+  overflow-y: scroll;
 }
